@@ -1,2 +1,3 @@
 1.1.0
+   - bug [10093] "FileHarvesterLight skal have success og failure kataloger"
    - bug [9766] "CargoContainerTest kalder metode der ikke findes"
